# vectorizer-ai-mcp

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  pyproject.toml
src/vectorizer_ai_mcp/: __init__.py  server.py  settings.py
tests/: __init__.py  test_integration.py  test_server.py  test_settings.py
