[project]
name = "vectorizer-ai-mcp"
version = "0.1.0"
description = "MCP server for Vectorizer.AI bitmap-to-vector conversion API"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Björn Büdenbender" }
]
requires-python = ">=3.11"
keywords = ["mcp", "vectorizer", "svg", "vector", "image-conversion", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]

[project.scripts]
vectorizer-ai-mcp = "vectorizer_ai_mcp.server:main"

[project.urls]
Repository = "https://gitlab.com/agentic.ai.forge/vectorizer-ai-mcp"
Homepage = "https://gitlab.com/agentic.ai.forge/vectorizer-ai-mcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vectorizer_ai_mcp"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # Pyflakes
    "I",      # isort
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
    "S",      # flake8-bandit (security)
    "PL",     # Pylint
    "TRY",    # tryceratops (exception handling)
]
ignore = [
    "TRY003",  # Avoid long messages in raise - too strict
    "PLR2004", # Magic value comparison - too strict for config
]

[tool.ruff.lint.pylint]
max-args = 7
max-statements = 50

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ARG001", "PLR2004"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "expensive: marks tests as credit-consuming (use -m 'not expensive' to skip)",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.14.10",
]
